fix(docs): correct server installation documentation and remove invalid CDN links (fixes #28)
- Replace invalid CDN links (cdn.hytale.com) with official methods:
  - Hytale Downloader CLI (https://downloader.hytale.com)
  - Copy from Hytale launcher installation
- Add Assets.zip as required file alongside HytaleServer.jar
- Update config format from server.properties to config.json
- Correct server launch command with --assets parameter
- Rewrite permissions.md with complete permission system docs
- Rewrite whitelist.md with JSON format and commands
- Update Docker deployment guide with correct methods
- Fix French plugin project-setup.md documentation

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>